--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "latest",
@@ -13,5 +14,10 @@
     "react-dom": "17.0.2",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.11",
+    "@types/react": "^17.0.37",
+    "typescript": "^4.5.2"
   }
 }
