--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.4",
     "axios": "^0.24.0",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "latest",
     "react": "17.0.2",
+    "react-carousel-vertical": "^1.10.27",
     "react-dom": "17.0.2",
     "remark": "^14.0.1",
-    "remark-html": "^15.0.0"
+    "remark-html": "^15.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
